# circle-app-backend/src/routes/V1.ts
@@ -4,6 +4,7 @@ import ThreadController from "../controllers/thread.controllers";
 import authControllers from "../controllers/auth.controllers";
 import { authentication } from "../middlewares/authentication";
 import reactionController from "../controllers/reaction.controller";
+import followController from "../controllers/follow.controller";
 
 export const routerV1 = express.Router();
 
@@ -17,6 +18,10 @@ routerV1.get("/users", authentication, UserController.findAll);
 routerV1.get("/users/:id", authentication, UserController.findOne);
 // routerV1.post("/users", UserController.create);
 routerV1.patch("/users", authentication, UserController.update);
+
+// FOLLOW
+routerV1.post("/follow", authentication, followController.follow);
+routerV1.delete("/unfollow", authentication, followController.unfollow);
 
 // THREADS
 routerV1.get("/threads", authentication, ThreadController.findAll);
